<resources>
    <string name="app_name">FoodOrderApp</string>
    <string name="sologan">Order from your favourite stores or vendors</string>
    <string name="create_account">Create an account</string>
    <string name="login">Login</string>
    <string name="register_description">Welcome friend, enter your details so lets get started in ordering food.</string>
    <string name="skip_underline"><u>Skip</u></string>
    <string name="skip">Skip</string>
    <string name="enter_email">Enter email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in_with_google"><u>Sign-in with Google</u></string>
    <string name="login_to_my_account">Login to my account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login_description">Good to see you again, enter your details below to continue ordering.</string>
    <string name="txt_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_underline"><u>Cancel</u></string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_pass_description">Enter your email address to request a password reset.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pass_description">A reset code has been sent to your email</string>
    <string name="enter_code">Enter code</string>
    <string name="didn_t_receive_an_otp">Didn\'t receive an OTP?</string>
    <string name="resend_otp"><b><u>Resend OTP</u></b></string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="sit_and_relax_while_your_orders_is_being_worked_on_it_ll_take_5min_before_you_get_it">Sit and relax while your orders is being worked on . It’ll take 5min before you get it</string>
    <string name="go_back_to_home">Go back to home</string>
    <string name="card_details">Card details</string>
    <string name="enter_card_details">Enter card details</string>
    <string name="exp_date">Exp date</string>
    <string name="dd_mm">DD/MM</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="cvv">CVV</string>
    <string name="pay_now">Pay now</string>
    <string name="delivery_method">Delivery method</string>
    <string name="payment">Payment</string>
    <string name="change">Change</string>
    <string name="pay_on_arrival">Pay on arrival</string>
    <string name="pay_with_cash_pos_upon_arrival">Pay with cash/POS upon arrival</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="subtotal">Subtotal</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="online_payment">Online payment</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="ok">OK</string>
</resources>