<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="22dp"
    android:paddingVertical="16dp"
    tools:context=".controller.PaymentActivity">

    <android.widget.ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="@dimen/_18sdp"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_arrow" />

    <TextView
        android:id="@+id/paymentHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBack"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentHeading"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/form_textview_padding"
            android:text="@string/card_details"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtCardDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_22sdp"
            android:background="@drawable/form"
            android:hint="@string/enter_card_details"
            android:paddingHorizontal="@dimen/edit_text_horizontal"
            android:paddingVertical="@dimen/edit_text_vertical"
            android:textSize="@dimen/_14sdp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/form_textview_padding"
                    android:text="@string/exp_date"
                    android:textColor="@color/black" />

                <EditText
                    android:maxLength="5"
                    android:id="@+id/txtExpDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_22sdp"
                    android:background="@drawable/form"
                    android:hint="@string/dd_mm"
                    android:inputType="date"
                    android:paddingHorizontal="@dimen/edit_text_horizontal"
                    android:paddingVertical="@dimen/edit_text_vertical"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/form_textview_padding"
                    android:text="@string/cvv"
                    android:textColor="@color/black" />

                <EditText
                    android:maxLength="4"
                    android:id="@+id/txtCvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_22sdp"
                    android:background="@drawable/form"
                    android:hint="@string/enter_cvv"
                    android:inputType="numberSigned"
                    android:paddingHorizontal="@dimen/edit_text_horizontal"
                    android:paddingVertical="@dimen/edit_text_vertical"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

        </GridLayout>

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnGoBackToHome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/btn_primary"
        android:text="@string/pay_now"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>