<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".controller.RegisterActivity">

    <!-- App bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_mini" />

        </LinearLayout>

        <TextView
            android:id="@+id/txvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_22sdp"
            android:gravity="center"
            android:text="@string/skip_underline"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>
    <!-- End App bar-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingBottom="@dimen/_22sdp"
        android:text="@string/register_description"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/email_address"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/textfield"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:paddingHorizontal="@dimen/edit_text_horizontal"
            android:paddingVertical="@dimen/edit_text_vertical"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/textfield"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/edit_text_horizontal"
            android:paddingVertical="@dimen/edit_text_vertical"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/confirm_password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/textfield"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/edit_text_horizontal"
            android:paddingVertical="@dimen/edit_text_vertical"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_14sdp"
        android:paddingHorizontal="@dimen/_22sdp">

        <android.widget.Button
            android:id="@+id/btnGoogleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_google"
            android:drawableLeft="@drawable/ic_google"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_14sdp"
            android:paddingVertical="@dimen/_10sdp" />

        <android.widget.Button
            android:layout_marginVertical="@dimen/_16sdp"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:background="@drawable/button_primary"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <android.widget.Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:background="@drawable/button_transparent"
            android:backgroundTint="@color/white"
            android:text="@string/login_to_my_account"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>