<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".controller.ForgotPasswordActivity">

    <!-- App bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_34sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />

        </LinearLayout>

        <TextView
            android:id="@+id/txvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_22sdp"
            android:gravity="center"
            android:text="@string/cancel_underline"
            android:textColor="@color/primary"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>
    <!-- End App bar-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingBottom="@dimen/_22sdp"
        android:text="@string/forgot_pass_description"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/form_textview_padding"
            android:text="@string/email_address"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/form_input_text"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:paddingHorizontal="@dimen/edit_text_horizontal"
            android:paddingVertical="@dimen/edit_text_vertical"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_22sdp"
            android:paddingVertical="@dimen/_100sdp">

            <android.widget.Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_16sdp"
                android:background="@drawable/btn_primary"
                android:text="@string/txt_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                android:background="@drawable/btn_transparent"
                android:backgroundTint="@color/white"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>